Bug 1148829 - Backport a safer version of part of bug 1061364 to make transitions stop running the refresh driver after they've finished. r=bbirtles, a=sledru